[package]
name = "createqrcode"
version = "0.1.0"
edition = "2024"
authors = ["Aasish Raj mail@aasishraj.com"]
description = "A CLI tool to convert data into QR codes"
license = "MIT"
repository = "https://github.com/aasishraj/createqrcode"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
qrcode = "0.14"
image = "0.25"
anyhow = "1.0"

[[bin]]
name = "createqrcode"
path = "src/main.rs"

